Remove issue with overlapping main div tag
- Removed main div tag from overlapping content and reduced to the about description
- Renamed .main-message -> .about-description-container
- Corrected improper indentation for improved legibility

--- a/assets/stylesheets/about.css
+++ b/assets/stylesheets/about.css
@@ -30,7 +30,7 @@
 }
 
 /* ABOUT US SECTION */
-.main-message{
+.about-description-container{
     padding: 0px 20px;
 }
 
